--- a/____06-artificial intelligence.ipynb
+++ b/____06-artificial intelligence.ipynb
@@ -210,6 +210,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Inteligencia esta nas MAQ ou nos DEVs?\n",
+    "\n",
+    "Nos Devs, pq a IA eh um programa/tecnica implementada por alguem.\n",
+    "Q sim... generaliza, abstrai ... mas feito por nós.\n",
+    "Temos até condicoes de deixa-la aprendendo e se superando... mas nos criamos isso\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IA eh programacao... simples.\n",
+    "Visão, processamento de IMG, Reconhecimento de Padroes, PLN, Otimizacao, Heiristicas... eh tudo progrmado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
