--- a/____02-why computer.ipynb
+++ b/____02-why computer.ipynb
@@ -276,7 +276,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "TUDO está envolvido na Tecnologia"
+   ]
   }
  ],
  "metadata": {
